--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css"> -->
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./assets/styles/main.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/main.scss"> -->
   </head>
   <body>
     <div id="app"></div>
