--- a/client/index.html
+++ b/client/index.html
@@ -22,8 +22,8 @@
     <div id="app"></div>
 
     <!-- Libraries -->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script> -->
     <!-- Webpack Bundle -->
     <script src="./build/bundle.js"></script>
   </body>
