--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,12 @@
 
     <!-- Latest compiled and minified CSS -->
     <!-- <link rel="icon" type="image/gif/png" href="./assets/images/favicon.ico"> -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="./assets/styles/main.css"> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
 
     <!-- CSS Plugins -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css"> -->
 
     <!-- Custom CSS -->
@@ -22,7 +22,7 @@
     <div id="app"></div>
 
     <!-- Libraries -->
-    <!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script> -->
     <!-- Webpack Bundle -->
     <script src="./build/bundle.js"></script>
